# fjall-sgx

./: Cargo.toml  Dockerfile  Makefile  README.md  setup.sh
app/: Cargo.toml  build.rs
app/src/: main.rs
enclave/: Cargo.toml  config.xml  enclave.edl
enclave/src/: lib.rs
engine/: Cargo.toml
engine/src/: compaction.rs  db.rs  flush.rs  lib.rs  memtable.rs  sst_file.rs
lsm-sgx/: Cargo.toml
lsm-sgx/src/: block.rs  bloom.rs  lib.rs  sstable.rs  types.rs
projects/hello-enclave/: Makefile  hello_enclave
projects/hello-enclave/app/: app.c
projects/hello-enclave/enclave/: enclave.c  enclave.config.xml  enclave.edl  enclave.lds  enclave_t.c  enclave_t.h  enclave_u.c  enclave_u.h
storage/: Cargo.toml
storage/src/: crypto.rs  encrypted.rs  lib.rs  memory.rs  std_fs.rs  traits.rs
