[workspace]
resolver = "2"
members = [
    "engine",
    "lsm-sgx",
    "sgx_edl",
    "storage"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The Teaclave Authors"]

[workspace.dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
