[package]
name = "fjall-sgx"
description = "Encrypted LSM-tree key-value store for Intel SGX enclaves, inspired by Fjall"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["lsm-sgx/std", "fjall-sgx-storage/std"]

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_tstd = { workspace = true }
lsm-sgx = { path = "../lsm-sgx", default-features = false }
fjall-sgx-storage = { path = "../storage", default-features = false }

# [dev-dependencies]
# fjall-sgx-storage = { path = "../storage", default-features = false, features = ["implementations"] }
