[package]
name = "fjall-sgx-storage"
description = "Storage abstraction layer for fjall-sgx"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std", "implementations"]
std = ["lsm-sgx/std"]
implementations = []  # Enable concrete storage implementations

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_tstd = { workspace = true }
lsm-sgx = { path = "../lsm-sgx", default-features = false }
